# mail-automation-agent

./: README.md  pyproject.toml  test_email_agent.py
src/email_assistant/: email_assistant.py  email_assistant_hitl.py  email_assistant_hitl_memory.py  email_assistant_hitl_memory_gmail.py  langgraph_101.py
